--- a/index.html
+++ b/index.html
@@ -1,12 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<head0>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
+    <link rel="stylesheet" href="style.css">   
+    <title>Tajam</title>
+</head0>
 <body>
-    
+    <nav>
+        <div class="contenerNAV">
+            <img class="navLogo" src="./res/logo.png" alt="">
+            <span class="navLogoSpan">tajam</span>
+            <ul>
+                <!-- <div class="contener"> -->
+            <li><a class="ahref" href="#">HOME</a></li>
+            <li><a class="ahref" href="#">ABOUT</a></li>
+            <li><a class="ahref" href="#">EXPERTISE</a></li>
+            <li><a class="ahref"href="#">TEAMS</a></li>
+            <li><a class="ahref" href="#">WORKS</a></li>
+            <li><a class="ahref" href="#">PEOPLE SAY</a></li>
+            <li><a class="ahref" href="#">CONTACT</a></li>
+                <!-- </div> -->
+            </ul>
+        </div>
+    </nav>
 </body>
 </html>
