--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 <body>
     <nav>
         <div class="contenerNAV">
+            <div class="logoContener">
             <img class="navLogo" src="./res/logo.png" alt="">
             <span class="navLogoSpan">tajam</span>
-            <ul>
-                <!-- <div class="contener"> -->
+        </div>
+        <div class="listContener">
+            
             <li><a class="ahref" href="#">HOME</a></li>
             <li><a class="ahref" href="#">ABOUT</a></li>
             <li><a class="ahref" href="#">EXPERTISE</a></li>
@@ -21,8 +23,8 @@
             <li><a class="ahref" href="#">WORKS</a></li>
             <li><a class="ahref" href="#">PEOPLE SAY</a></li>
             <li><a class="ahref" href="#">CONTACT</a></li>
-                <!-- </div> -->
-            </ul>
+            
+        </div>
         </div>
     </nav>
 </body>
