--- a/index.html
+++ b/index.html
@@ -1,31 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head0>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">   
+  <head0>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Tajam</title>
-</head0>
-<body>
-    <nav>
+  </head0>
+  <body>
+    <header>
+     <nav>
         <div class="contenerNAV">
-            <div class="logoContener">
-            <img class="navLogo" src="./res/logo.png" alt="">
-            <span class="navLogoSpan">tajam</span>
-            </div>
-                <div class="listContener">
-            
-            <li><a class="ahref" href="#">HOME</a></li>
-            <li><a class="ahref" href="#">ABOUT</a></li>
-            <li><a class="ahref" href="#">EXPERTISE</a></li>
-            <li><a class="ahref"href="#">TEAMS</a></li>
-            <li><a class="ahref" href="#">WORKS</a></li>
-            <li><a class="ahref" href="#">PEOPLE SAY</a></li>
-            <li><a class="ahref" href="#">CONTACT</a></li>
-            
-             </div>
+        <div class="logoContener">
+          <img class="navLogo" src="./res/logo.png" alt="" />
+          <span class="navLogoSpan">tajam</span>
         </div>
-    </nav>
-</body>
+        <div class="listContener">
+          <li><a class="ahref" href="#">HOME</a></li>
+          <li><a class="ahref" href="#">ABOUT</a></li>
+          <li><a class="ahref" href="#">EXPERTISE</a></li>
+          <li><a class="ahref" href="#">TEAMS</a></li>
+          <li><a class="ahref" href="#">WORKS</a></li>
+          <li><a class="ahref" href="#">PEOPLE SAY</a></li>
+          <li><a class="ahref" href="#">CONTACT</a></li>
+        </div>
+     </nav>
+    </header>
+    <section>
+      <div class="contenerHome">
+        <h2>We Are Awesome Creative Agency</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+        doloremque possimus incidunt nesciunt, eaque eligendi repudiandae
+        repellat eius quidem omnis soluta, provident ipsum aliquid voluptatibus
+        tempora nisi amet cum distinctio.
+        </p>
+        <a class="buttonLearnMore" href="#"><button>Learn More</button></a> </div>
+    </div>
+    </section>
+  </body>
 </html>
