--- a/index.html
+++ b/index.html
@@ -1,29 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head0>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+<head0>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">   
     <title>Tajam</title>
-  </head0>
-  <body>
-    <header>
-     <nav>
+</head0>
+<body>
+    <nav>
         <div class="contenerNAV">
-        <div class="logoContener">
-          <img class="navLogo" src="./res/logo.png" alt="" />
-          <span class="navLogoSpan">tajam</span>
+            <div class="logoContener">
+            <img class="navLogo" src="./res/logo.png" alt="">
+            <span class="navLogoSpan">tajam</span>
+            </div>
+                <div class="listContener">
+            
+            <li><a class="ahref" href="#">HOME</a></li>
+            <li><a class="ahref" href="#">ABOUT</a></li>
+            <li><a class="ahref" href="#">EXPERTISE</a></li>
+            <li><a class="ahref"href="#">TEAMS</a></li>
+            <li><a class="ahref" href="#">WORKS</a></li>
+            <li><a class="ahref" href="#">PEOPLE SAY</a></li>
+            <li><a class="ahref" href="#">CONTACT</a></li>
+            
+             </div>
         </div>
-        <div class="listContener">
-          <li><a class="ahref" href="#">HOME</a></li>
-          <li><a class="ahref" href="#">ABOUT</a></li>
-          <li><a class="ahref" href="#">EXPERTISE</a></li>
-          <li><a class="ahref" href="#">TEAMS</a></li>
-          <li><a class="ahref" href="#">WORKS</a></li>
-          <li><a class="ahref" href="#">PEOPLE SAY</a></li>
-          <li><a class="ahref" href="#">CONTACT</a></li>
-        </div>
+        <section>
+            <div class="contenerhome">
+                <h2>we are aws</h2>
+                <p>Lorem ipsum dolor sit amet consecte</p>
+                <a href="">learnMore</a>
+            </div>
+        </section>
     </nav>
 </body>
 </html>
