--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section>
       <div class="contenerHome">
         <h2>We Are Awesome Creative Agency</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+        <p class="Ptext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
         doloremque possimus incidunt nesciunt, eaque eligendi repudiandae
         repellat eius quidem omnis soluta, provident ipsum aliquid voluptatibus
         tempora nisi amet cum distinctio.
