--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         repellat eius quidem omnis soluta, provident ipsum aliquid voluptatibus
         tempora nisi amet cum distinctio.
         </p>
-        <a class="buttonLearnMore" href="#"><button>Learn More</button></a> </div>
+        <a class="buttonLearnMore" href="#"><button>LEARN MORE</button></a>
     </div>
     </section>
   </body>
