--- a/index.html
+++ b/index.html
@@ -58,5 +58,14 @@
          </div>
       </div>
     </section>
+    <section>
+      <div class="watchOurStory" >
+        <img class="playLogo" src="res/play.png" alt="">
+        <h3 class="watchText">WATCH OUR STORY</h3>
+      </div>
+    </section>
+    <section class="ourTeam">
+      <div class="ourTeamContener">
+    </section>
   </body>
 </html>
