--- a/index.html
+++ b/index.html
@@ -69,32 +69,32 @@
     <section class="ourTeam">
       <div class="ourTeamContener">
        <div class="teamText">
-          <H1>MEET OUR AMAZING TEAM</H1> <H3>lorem m ipsum dolor sit amet consectetur</H3>
+          <H1 class="h1Team">MEET OUR AMAZING TEAM</H1> <H3 class="h3Team">lorem m ipsum dolor sit amet consectetur</H3>
        </div>
           <div class="theTeam">
             <div class="teamCard">
               <img src="res/profile-pic.png" width="150px" alt="">
-                <h2>John Doe</h2>
-                <h3>CEO</h3>
+                <h2 class="h2Team">John Doe</h2>
+                <h3 class="h3Team">CEO</h3>
             </div>
             <div class="teamCard">
               <img src="res/profile-pic.png" width="150px" alt="">
-                <h2>John Doe</h2>
-                <h3>CEO</h3>
+                <h2 class="h2Team">John Doe</h2>
+                <h3 class="h3Team">CEO</h3>
             </div>
             <div class="teamCard">
               <img src="res/profile-pic.png" width="150px" alt="">
-                <h2>John Doe</h2>
-                <h3>CEO</h3>
+                <h2 class="h2Team">John Doe</h2>
+                <h3 class="h3Team">CEO</h3>
             </div>
             <div class="teamCard">
               <img src="res/profile-pic.png" width="150px" alt="">
-                <h2>John Doe</h2>
-                <h3>CEO</h3>
+                <h2 class="h2Team">Jahn Doe</h2>
+                <h3 class="h3Team">CEO</h3>
             </div>
         </div>
        <div class="teamButton">
-          <H3>Become a member of our dream team, Join us!</H3>
+          <H3 class="h3Team">Become a member of our dream team, Join us!</H3>
           <a class="buttonLearnMore" href="#"><button>We ARE HIRING</button></a>
        </div>
       
