--- a/index.html
+++ b/index.html
@@ -182,6 +182,20 @@
 
        </div>           
     </section> 
+    <footer>
+      <div>
+        <div class="contenairHelp">
+          <div></div>
+          <
+        </div>
+        <div class="contenairOurStudio">
+          <div></div>
+        </div>
+        <div class="contenairStayInTouch">
+          <div></div>
+        </div>
+      </div>
+    </footer>
 
   </body>
 </html>
