--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
           
             <input type="text" id="subject" name=" Subject" placeholder="Subject" class="type-1"><br>
           
-            <input class="mes" type="text"  name="Message" placeholder="Your Message" class="type-1"><br>
+            <input type="text"  name="Message" placeholder="Your Message" class="type-1"><br>
 
             </input>
            </form>
