--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
         <div class="contenerHome">
           <h2>We Are Awesome Creative Agency</h2>
+          <hr size="2" width="7%" color="#a2cfff">
           <p class="Ptext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
           doloremque possimus incidunt nesciunt, eaque eligendi repudiandae
           repellat eius quidem omnis soluta, provident ipsum aliquid voluptatibus
@@ -71,6 +72,7 @@
 
         <div class="expertiseText">
               <h2 class="h2Expertise">EXPERTISE</h2>
+              <hr size="2" width="7%" color="#a2cfff">  
               <h3 class="h3ExpertisetTitle">nostrum modi dolores aperiam quaerat. Labore totam doloribus molestias</h3>
         </div>
         <div class="ourExpertise">
@@ -110,6 +112,7 @@
       <div class="ourTeamContener">
        <div class="teamText">
           <H1 class="h1Team">MEET OUR AMAZING TEAM</H1> <H3 class="h3Team">lorem m ipsum dolor sit amet consectetur</H3>
+          <hr size="2" width="15%" color="white"> 
        </div>
           <div class="theTeam">
             <div class="teamCard">
